UPDATE: aggiunto position fixed nell'header con uno z-index

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@
     margin-left: 48px;
 }
 
+.fixed{
+    position: fixed;
+}
+
 /* FLEX */
 
 .flex{
@@ -80,7 +84,6 @@
 .align-items-center{
     align-items: center;
 }
-
 
 
 /* JUSTIFY-CONTENT: CENTER; ALIGN-ITEMS: CENTER */
@@ -172,6 +175,7 @@
 .menu{
     width: 100%;
     height: 70px;
+    z-index: 1;
 }
 
 .imgSize{
@@ -272,4 +276,5 @@ main{
 
 footer{
     padding-top: 100px;
+    height: 100%;
 }
